[project]
name = "comfyui_workflow_importer"
version = "1.0.0"
description = "Import ComfyUI workflows from images containing embedded metadata."
readme = "README.md"
license = { file = "LICENSE" }

[tool.comfy]
PublisherId = "Matthew-X/comfyui-workflow_importer"
DisplayName = "Workflow Importer"
Tags = ["workflow", "import", "ui"]
