[project]
name = "comfyui_workflow_importer"
version = "1.0.0"
description = "Import ComfyUI workflows from images containing embedded metadata."
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/Matthew-X/comfyui-workflow_importer"

[tool.comfy]
PublisherId = "herox"
DisplayName = "Workflow Importer"
Icon = ""
